src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) bool ocl_Device_errorCorrectionSupport_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_executionCapabilities_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_globalMemCacheSize_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_globalMemCacheType_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_globalMemCacheLineSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_globalMemSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_localMemSize_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_localMemType_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_hostUnifiedMemory_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_imageSupport_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_imageFromBufferSupport_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_intelSubgroupsSupport_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_image2DMaxWidth_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_image2DMaxHeight_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_image3DMaxWidth_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_image3DMaxHeight_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_image3DMaxDepth_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_imageMaxBufferSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_imageMaxArraySize_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_vendorID_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_isAMD_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_isIntel_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_isNVidia_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxClockFrequency_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxComputeUnits_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxConstantArgs_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_maxConstantBufferSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_maxMemAllocSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_maxParameterSize_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxReadImageArgs_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxWriteImageArgs_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxSamplers_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_maxWorkGroupSize_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_maxWorkItemDims_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_memBaseAddrAlign_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthChar_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthShort_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthInt_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthLong_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthFloat_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthDouble_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_nativeVectorWidthHalf_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthChar_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthShort_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthInt_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthLong_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthFloat_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthDouble_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_preferredVectorWidthHalf_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_printfBufferSize_0(void* self);
extern "C" __declspec(dllexport) size_t ocl_Device_profilingTimerResolution_0(void* self);
extern "C" __declspec(dllexport) void* ocl_Device_getDefault_0();
extern "C" __declspec(dllexport) void ocl_OpenCLExecutionContext_Delete(void* self);
extern "C" __declspec(dllexport) int cv_borderInterpolate_0(int p, int len, int borderType);
extern "C" __declspec(dllexport) void cv_copyMakeBorder_0(void* src, void* dst, int top, int bottom, int left, int right, int borderType, cv::Scalar value);
extern "C" __declspec(dllexport) void cv_add_0(void* src1, void* src2, void* dst, void* mask, int dtype);
extern "C" __declspec(dllexport) void cv_subtract_0(void* src1, void* src2, void* dst, void* mask, int dtype);
extern "C" __declspec(dllexport) void cv_multiply_0(void* src1, void* src2, void* dst, double scale, int dtype);
extern "C" __declspec(dllexport) void cv_divide_0(void* src1, void* src2, void* dst, double scale, int dtype);
extern "C" __declspec(dllexport) void cv_divide_1(double scale, void* src2, void* dst, int dtype);
extern "C" __declspec(dllexport) void cv_scaleAdd_0(void* src1, double alpha, void* src2, void* dst);
extern "C" __declspec(dllexport) void cv_addWeighted_0(void* src1, double alpha, void* src2, double beta, double gamma, void* dst, int dtype);
extern "C" __declspec(dllexport) void cv_convertScaleAbs_0(void* src, void* dst, double alpha, double beta);
extern "C" __declspec(dllexport) void cv_LUT_0(void* src, void* lut, void* dst);