src/OpenCV5Sharp/Generated/NativeMethods.Core.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_errorCorrectionSupport_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_executionCapabilities_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_globalMemCacheSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_globalMemCacheType_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_globalMemCacheLineSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_globalMemSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_localMemSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_localMemType_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_hostUnifiedMemory_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_imageSupport_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_imageFromBufferSupport_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_intelSubgroupsSupport_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_image2DMaxWidth_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_image2DMaxHeight_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_image3DMaxWidth_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_image3DMaxHeight_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_image3DMaxDepth_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_imageMaxBufferSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_imageMaxArraySize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_vendorID_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_isAMD_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_isIntel_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ocl_Device_isNVidia_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxClockFrequency_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxComputeUnits_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxConstantArgs_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_maxConstantBufferSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_maxMemAllocSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_maxParameterSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxReadImageArgs_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxWriteImageArgs_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxSamplers_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_maxWorkGroupSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_maxWorkItemDims_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_memBaseAddrAlign_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthChar_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthShort_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthInt_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthLong_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthFloat_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthDouble_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_nativeVectorWidthHalf_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthChar_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthShort_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthInt_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthLong_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthFloat_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthDouble_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ocl_Device_preferredVectorWidthHalf_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_printfBufferSize_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long ocl_Device_profilingTimerResolution_0(OclDeviceHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ocl_Device_getDefault_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ocl_OpenCLExecutionContext_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_borderInterpolate_0(int p, int len, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_copyMakeBorder_0(MatHandle src, MatHandle dst, int top, int bottom, int left, int right, int borderType, Scalar value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_add_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_subtract_0(MatHandle src1, MatHandle src2, MatHandle dst, IntPtr mask, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_multiply_0(MatHandle src1, MatHandle src2, MatHandle dst, double scale, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_divide_0(MatHandle src1, MatHandle src2, MatHandle dst, double scale, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_divide_1(double scale, MatHandle src2, MatHandle dst, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_scaleAdd_0(MatHandle src1, double alpha, MatHandle src2, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_addWeighted_0(MatHandle src1, double alpha, MatHandle src2, double beta, double gamma, MatHandle dst, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convertScaleAbs_0(MatHandle src, MatHandle dst, double alpha, double beta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_LUT_0(MatHandle src, MatHandle lut, MatHandle dst);
